refactoring - add async save and adjust somes config