@@ -6,4 +6,4 @@ COPY build/libs/people-service-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE	8000
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT [ "java", "-XX:+UseParallelGC", "-XX:MaxRAMPercentage=75", "--enable-preview", "-jar", "app.jar" ]
